--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="ext2.css">
+    <style>
+      h1
+      {
+        background-color:#6495ed;
+      }
+      p
+      {
+        background-color:#e0ffff;
+      }
+      div
+      {
+        background-color:#b0c4de;
+      }
+    </style>
+  </head>
+  <body>
+  <h1>Internal, External & Inline Style!</h1>
+  <div>Text inside a div element.
+    <p>paragraph background color</p>
+    still in the div element.
+  </div>
+  <p style="color:margin-left:20px:">Hello World</p>
+  </body>
+    </html>
