--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
       div
       {
-        background-color:#b0c4de;
+        background-color:#fefbd8;
       }
     </style>
   </head>
